--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,5 +20,18 @@
 </mat-toolbar>
 
 <main class="container">
-  <router-outlet></router-outlet>
+  <mat-grid-list cols="5">
+    <mat-grid-tile
+      [colspan]="1"
+      [rowspan]="1"
+    >
+    </mat-grid-tile>
+    <mat-grid-tile
+      [colspan]="4"
+      [rowspan]="1"
+    >
+      <router-outlet></router-outlet>
+    </mat-grid-tile>
+  </mat-grid-list>
+
 </main>
