--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,29 +20,30 @@
 </mat-toolbar>
 
 <main class="container">
-  <mat-grid-list cols="5" rowHeight="500px">
+  <mat-grid-list [cols]="5" rowHeight="1:2.5" *ngIf="auth.isAuthenticated()">
     <mat-grid-tile
       [colspan]="1"
       [rowspan]="1"
     >
-      <mat-card class="example-card">
+      <mat-card>
         <mat-card-header>
-          <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-title>Shiba Inu</mat-card-title>
-          <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+          <img mat-card-avatar style="background-size: cover" src="{{profile?.picture}}" />
+          <mat-card-title>{{ profile?.name }}</mat-card-title>
+          <mat-card-subtitle>{{ profile?.nickname }}</mat-card-subtitle>
         </mat-card-header>
-        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
         <mat-card-content>
-          <p>
-            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-            A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-            bred for hunting.
-          </p>
+          <mat-nav-list>
+            <a mat-list-item >001</a>
+            <a mat-list-item >002</a>
+            <a mat-list-item >003</a>
+            <a mat-list-item >004</a>
+            <a mat-list-item >005</a>
+            <a mat-list-item >006</a>
+            <a mat-list-item >007</a>
+            <a mat-list-item >008</a>
+            <a mat-list-item >009</a>
+          </mat-nav-list>
         </mat-card-content>
-        <mat-card-actions>
-          <button mat-button>LIKE</button>
-          <button mat-button>SHARE</button>
-        </mat-card-actions>
       </mat-card>
     </mat-grid-tile>
     <mat-grid-tile
