--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <span>Health Board</span>
+    <span routerLink="">Health Board</span>
     <span class="spacer"></span>
 
     <button
@@ -27,14 +27,14 @@
     >
       <mat-card>
         <mat-card-header>
-          <img mat-card-avatar style="background-size: cover" src="{{profile?.picture}}" />
-          <mat-card-title>{{ profile?.name }}</mat-card-title>
-          <mat-card-subtitle>{{ profile?.nickname }}</mat-card-subtitle>
+          <img mat-card-avatar routerLink="profile" style="background-size: cover" src="{{profile?.picture}}" />
+          <mat-card-title routerLink="profile">{{ profile?.name }}</mat-card-title>
+          <mat-card-subtitle routerLink="profile">{{ profile?.nickname }}</mat-card-subtitle>
         </mat-card-header>
         <mat-card-content>
           <mat-nav-list>
             <a mat-list-item >001</a>
-            <a mat-list-item >002</a>
+            <a mat-list-item routerLink="user">Users</a>
             <a mat-list-item >003</a>
             <a mat-list-item >004</a>
             <a mat-list-item >005</a>
