--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -8,6 +8,6 @@
       <label><i class="glyphicon glyphicon-user"></i> Nickname</label>
       <h3 class="nickname">{{ profile?.nickname }}</h3>
     </div>
-    <pre class="full-profile">{{ profile | json }}</pre>
+    <p class="full-profile">{{ profile | json }}</p>
   </div>
 </div>
