--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,7 @@
         <mat-card-content>
           <mat-nav-list>
             <a mat-list-item >001</a>
-            <a mat-list-item routerLink="user">Users</a>
+            <a mat-list-item routerLink="user"><mat-icon>account_box</mat-icon>Users</a>
             <a mat-list-item >003</a>
             <a mat-list-item >004</a>
             <a mat-list-item >005</a>
