--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,7 @@
     <mat-grid-tile
       [colspan]="1"
       [rowspan]="1"
+      [style.border-right]="'1px dashed #ddd'"
     >
       <mat-card>
         <mat-card-header>
