--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,12 @@
         <mat-card-content>
           <mat-nav-list>
             <a mat-list-item >001</a>
-            <a mat-list-item routerLink="user"><mat-icon>account_box</mat-icon>Users</a>
+            <a mat-list-item routerLink="user">
+              <div mat-list-avatar>
+                <mat-icon>account_box</mat-icon>
+              </div>
+              <h3 mat-line>Users</h3>
+            </a>
             <a mat-list-item >003</a>
             <a mat-list-item >004</a>
             <a mat-list-item >005</a>
