--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -5,7 +5,13 @@
 </div>
 
 <div class="example-container mat-elevation-z8">
-
+  <div class="example-loading-shade"
+       *ngIf="isLoadingResults || isRateLimitReached">
+    <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+    <div class="example-rate-limit-reached" *ngIf="isRateLimitReached">
+      // TODO Error Message
+    </div>
+  </div>
   <mat-table [dataSource]="dataSource" matSort >
 
     <!-- ID Column -->
@@ -17,7 +23,14 @@
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{row.resource.name[0].family}} </mat-cell>
+      <mat-cell *matCellDef="let row">
+        <div *ngIf="row.resource && row.resource.name && row.resource.name[0].family">
+          {{row.resource.name[0].family}}
+        </div>
+        <div *ngIf="!row.resource || !row.resource.name || !row.resource.name[0].family">
+          -
+        </div>
+      </mat-cell>
     </ng-container>
 
     <!-- Birthday Column -->
@@ -37,7 +50,8 @@
     </mat-row>
   </mat-table>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+  <mat-paginator [length]="length" [pageSize]="pageSize">
+  </mat-paginator>
 </div>
 
 <br/>
