Add a Device Component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,7 +41,12 @@
               </div>
               <h3 mat-line>Users</h3>
             </a>
-            <a mat-list-item >003</a>
+            <a mat-list-item routerLink="device">
+              <div mat-list-avatar>
+                <mat-icon>perm_device_information</mat-icon>
+              </div>
+              <h3 mat-line>Devices</h3>
+            </a>
             <a mat-list-item >004</a>
             <a mat-list-item >005</a>
             <a mat-list-item >006</a>
