--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
 </mat-toolbar>
 
 <main class="container">
-  <mat-grid-list [cols]="5" rowHeight="1:2.5" *ngIf="auth.isAuthenticated()">
+  <mat-grid-list [cols]="5" rowHeight="1:3" *ngIf="auth.isAuthenticated()">
     <mat-grid-tile
       [colspan]="1"
       [rowspan]="1"
@@ -34,7 +34,6 @@
         </mat-card-header>
         <mat-card-content>
           <mat-nav-list>
-            <a mat-list-item >001</a>
             <a mat-list-item routerLink="user">
               <div mat-list-avatar>
                 <mat-icon>account_box</mat-icon>
@@ -46,6 +45,24 @@
                 <mat-icon>perm_device_information</mat-icon>
               </div>
               <h3 mat-line>Devices</h3>
+            </a>
+            <a mat-list-item>
+              <div mat-list-avatar>
+                <img src="assets/heart-with-electrocardiogram.svg" width="20" />
+              </div>
+              <h3 mat-line>Cardio Signal</h3>
+            </a>
+            <a mat-list-item>
+              <div mat-list-avatar>
+                <img src="assets/icons8-gyroscope-50.png" width="20" />
+              </div>
+              <h3 mat-line>Motion Signal</h3>
+            </a>
+            <a mat-list-item>
+              <div mat-list-avatar>
+                <mat-icon>bluetooth_connected</mat-icon>
+              </div>
+              <h3 mat-line>Bluetooth Connect</h3>
             </a>
             <a mat-list-item >004</a>
             <a mat-list-item >005</a>
