[修改] 使用 Smart Table for Manage Organization

--- a/src/app/pages/system-settings/manage-organization/manage-organization.component.html
+++ b/src/app/pages/system-settings/manage-organization/manage-organization.component.html
@@ -1,3 +1,11 @@
-<p>
-  manage-organization works!
-</p>
+
+<nb-card>
+  <nb-card-header>
+    單位管理
+  </nb-card-header>
+
+  <nb-card-body>
+    <ng2-smart-table [settings]="settings" [source]="source" (deleteConfirm)="onDeleteConfirm($event)">
+    </ng2-smart-table>
+  </nb-card-body>
+</nb-card>
