[修改] 加上查詢 UI

--- a/src/app/pages/case-management/cases/cases.component.html
+++ b/src/app/pages/case-management/cases/cases.component.html
@@ -1,5 +1,39 @@
 <nb-card>
   <nb-card-header>
+    查詢條件
+  </nb-card-header>
+  <nb-card-body>
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="個案姓名">
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="身分證字號">
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="form-group">
+          <input type="email" class="form-control" placeholder="申請結果">
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="接案日期範圍">
+        </div>
+      </div>
+    </div>
+    <button type="submit" class="btn btn-primary">查詢</button>
+  </nb-card-body>
+</nb-card>
+
+
+<nb-card>
+  <nb-card-header>
     個案資料
   </nb-card-header>
 
