chore: fix the title

--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -4,7 +4,7 @@
       <i class="nb-menu"></i>
     </a>
     <div class="logo" (click)="goToHome()">
-      <span>健康資訊儀錶板</span>
+      <span>健康資訊儀表板</span>
     </div>
   </div>
 </div>
