--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -19,6 +19,7 @@
   <nb-action class="control-item" disabled icon="nb-notifications"></nb-action>
   <nb-action class="control-item" icon="nb-email"></nb-action>
   <nb-action class="control-item">
-    <nb-search type="rotate-layout" (click)="startSearch()"></nb-search>
+    <input type="text" nbInput #baseUrl placeholder="輸入 BaseURL" (keyup.enter)="update(baseUrl.value)"
+           (blur)="update(baseUrl.value)" minlength="100" value="http://hapi.fhir.org/baseDstu3"/>
   </nb-action>
 </nb-actions>
