refactor: single data stream

--- a/src/app/pages/case-management/index/index.component.html
+++ b/src/app/pages/case-management/index/index.component.html
@@ -1,3 +1,10 @@
-<p>
-  index works!
-</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-5 col-lg-5">
+      <ngx-case-form ></ngx-case-form>
+    </div>
+    <div class="col-md-7 col-lg-7">
+      <ngx-case-list [dataSet]="dataSet"></ngx-case-list>
+    </div>
+  </div>
+</div>
