--- a/src/app/pages/case-management/case-list/case-list.component.html
+++ b/src/app/pages/case-management/case-list/case-list.component.html
@@ -1,36 +1,3 @@
-<nb-card>
-  <nb-card-header>
-    查詢條件
-  </nb-card-header>
-  <nb-card-body>
-    <div class="row">
-      <div class="col-sm-6">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="個案姓名">
-        </div>
-      </div>
-      <div class="col-sm-6">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="身分證字號">
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-6">
-        <div class="form-group">
-          <input type="email" class="form-control" placeholder="申請結果">
-        </div>
-      </div>
-      <div class="col-sm-6">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="接案日期範圍">
-        </div>
-      </div>
-    </div>
-    <button type="submit" class="btn btn-primary">查詢</button>
-  </nb-card-body>
-</nb-card>
-
 
 <nb-card>
   <nb-card-header>
@@ -48,11 +15,15 @@
 
       <dxo-paging [pageSize]="10"></dxo-paging>
 
-      <dxi-column dataField="id" dataType="string" ></dxi-column>
-      <dxi-column dataField="name[0].family" dataType="string" ></dxi-column>
-      <dxi-column dataField="name[0].given[0]" dataType="string" ></dxi-column>
+      <dxi-column dataField="identifier[0].value" dataType="string" ></dxi-column>
+      <dxi-column dataField="name[0].text" dataType="string" ></dxi-column>
       <dxi-column dataField="gender" dataType="string" ></dxi-column>
       <dxi-column dataField="birthDate" dataType="string" ></dxi-column>
+      <dxi-column dataField="address.text" dataType="string" ></dxi-column>
+      <dxi-column dataField="telecom.system" dataType="string" ></dxi-column>
+      <dxi-column dataField="contact.name.text" dataType="string" ></dxi-column>
+      <dxi-column dataField="contact.relationship.text" dataType="string" ></dxi-column>
+      <dxi-column dataField="contact.telecom" dataType="string" ></dxi-column>
 
     </dx-data-grid>
   </nb-card-body>
