feat: add refresh btn

--- a/src/app/pages/case-management/case-list/case-list.component.html
+++ b/src/app/pages/case-management/case-list/case-list.component.html
@@ -5,7 +5,8 @@
                   [dataSource]="dataSource"
                   [showRowLines]="true"
                   [showColumnLines]="true"
-                  [showBorders]="true">
+                  [showBorders]="true"
+                  (onToolbarPreparing)="onToolbarPreparing($event)">
 
       <dxo-paging [pageSize]="10"></dxo-paging>
 
