--- a/src/app/pages/laboratory/index/index.component.html
+++ b/src/app/pages/laboratory/index/index.component.html
@@ -1,3 +1,20 @@
-<p>
-  index works!
-</p>
+<nb-card>
+  <nb-card-body>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3">
+          <ngb-tabset type="pills" [orientation]="vertical" (tabChange)="onSelectClassification($event.nextId)">
+            <ng-container *ngFor="let item of classifications">
+              <ngb-tab [id]="item">
+                <ng-template ngbTabTitle> {{item}} </ng-template>
+              </ngb-tab>
+            </ng-container>
+          </ngb-tabset>
+        </div>
+        <div class="col-md-9">
+          <ngx-lab-form [title]="selectedClassification"></ngx-lab-form>
+        </div>
+      </div>
+    </div>
+  </nb-card-body>
+</nb-card>
