--- a/src/app/pages/laboratory/index/index.component.html
+++ b/src/app/pages/laboratory/index/index.component.html
@@ -5,14 +5,14 @@
         <div class="col-md-3">
           <ngb-tabset type="pills" [orientation]="vertical" (tabChange)="onSelectClassification($event.nextId)">
             <ng-container *ngFor="let item of classifications">
-              <ngb-tab [id]="item">
-                <ng-template ngbTabTitle> {{item}} </ng-template>
+              <ngb-tab [id]="item.class">
+                <ng-template ngbTabTitle> {{item.class}} </ng-template>
               </ngb-tab>
             </ng-container>
           </ngb-tabset>
         </div>
         <div class="col-md-9">
-          <ngx-lab-form [title]="selectedClassification"></ngx-lab-form>
+          <ngx-lab-form [classification]="selectedClassification"></ngx-lab-form>
         </div>
       </div>
     </div>
