fix: init value

--- a/src/app/pages/laboratory/lab-form/lab-form.component.html
+++ b/src/app/pages/laboratory/lab-form/lab-form.component.html
@@ -10,6 +10,7 @@
           <div class="dx-field-label">數值</div>
           <div class="dx-field-value">
             <dx-number-box
+              [value]="value"
               [format]="format"
               [showSpinButtons]="true"
               [showClearButton]="true">
