--- a/src/app/pages/laboratory/index/index.component.html
+++ b/src/app/pages/laboratory/index/index.component.html
@@ -6,7 +6,7 @@
           <ngb-tabset type="pills" [orientation]="vertical" (tabChange)="onSelectClassification($event.nextId)">
             <ng-container *ngFor="let item of classifications">
               <ngb-tab [id]="item.class">
-                <ng-template ngbTabTitle> {{item.class}} </ng-template>
+                <ng-template ngbTabTitle> <span class="mat-h3">{{item.class}}</span> </ng-template>
               </ngb-tab>
             </ng-container>
           </ngb-tabset>
