fix: two way bindings.

--- a/src/app/pages/laboratory/lab-form/lab-form.component.html
+++ b/src/app/pages/laboratory/lab-form/lab-form.component.html
@@ -10,7 +10,7 @@
           <div class="dx-field-value">
             <dx-number-box
               class="mat-h2"
-              [value]="value"
+              [(value)]="value"
               [format]="format"
               [showSpinButtons]="true"
               [showClearButton]="true">
