--- a/src/app/pages/laboratory/index/index.component.html
+++ b/src/app/pages/laboratory/index/index.component.html
@@ -12,7 +12,7 @@
           </ngb-tabset>
         </div>
         <div class="col-md-9">
-          <ngx-lab-form [classification]="selectedClassification"></ngx-lab-form>
+          <ngx-lab-form [classification]="selectedClassification" (resource)="onSave($event)"></ngx-lab-form>
         </div>
       </div>
     </div>
