feat: display & generate resource json format with patient resource

--- a/src/app/pages/laboratory/index/index.component.html
+++ b/src/app/pages/laboratory/index/index.component.html
@@ -40,7 +40,7 @@
           </ngb-tabset>
         </div>
         <div class="col-md-9">
-          <ngx-lab-form [classification]="selectedClassification" (resource)="onSave($event)"></ngx-lab-form>
+          <ngx-lab-form [classification]="selectedClassification" [subject]="patient" (resource)="onSave($event)"></ngx-lab-form>
         </div>
       </div>
     </div>
