--- a/src/app/pages/history/index/index.component.html
+++ b/src/app/pages/history/index/index.component.html
@@ -1,3 +1,25 @@
-<p>
-  index works!
-</p>
+<dx-scheduler
+  [dataSource]="appointmentsData"
+  [views]='["timelineDay", "timelineWeek", "timelineMonth"]'
+  currentView="timelineMonth"
+  [firstDayOfWeek]="0"
+  [startDayHour]="8"
+  [endDayHour]="20"
+  [cellDuration]="60"
+  [groups]="['priority']"
+  [currentDate]="currentDate"
+  [height]="580">
+  <dxi-resource
+    fieldExpr="ownerId"
+    [allowMultiple]="true"
+    [dataSource]="resourcesData"
+    label="Owner"
+    [useColorAsDefault]="true"
+  ></dxi-resource>
+  <dxi-resource
+    fieldExpr="priority"
+    [allowMultiple]="false"
+    [dataSource]="prioritiesData"
+    label="Priority"
+  ></dxi-resource>
+</dx-scheduler>
