--- a/src/app/pages/laboratory/index/index.component.html
+++ b/src/app/pages/laboratory/index/index.component.html
@@ -30,7 +30,7 @@
       </div>
       <div class="row">
         <div class="col-md-3">
-          <ngb-tabset type="pills" [orientation]="vertical"
+          <ngb-tabset type="pills" [orientation]="'vertical'"
                       (tabChange)="onSelectClassification($event.nextId)">
             <ng-container *ngFor="let item of classifications">
               <ngb-tab [id]="item.class">
