--- a/src/app/pages/history/index/index.component.html
+++ b/src/app/pages/history/index/index.component.html
@@ -1,22 +1,17 @@
 <dx-scheduler
   [views]='["timelineDay", "timelineWeek", "timelineMonth"]'
-  currentView="timelineMonth"
+  currentView="timelineWeek"
   [firstDayOfWeek]="0"
-  [startDayHour]="8"
-  [endDayHour]="20"
+  [startDayHour]="0"
+  [endDayHour]="24"
   [cellDuration]="60"
-  [groups]="['priority']"
+  [groups]="['resourceType']"
   [currentDate]="currentDate"
-  [height]="580">
+  [height]="550">
   <dxi-resource
-    fieldExpr="ownerId"
-    [allowMultiple]="true"
-    label="Owner"
-    [useColorAsDefault]="true"
-  ></dxi-resource>
-  <dxi-resource
-    fieldExpr="priority"
+    fieldExpr="resourceType"
     [allowMultiple]="false"
-    label="Priority"
+    [dataSource]="resourceType"
+    label="History"
   ></dxi-resource>
 </dx-scheduler>
