feat: 將 condition & procedure on TimeLine

--- a/src/app/pages/history/index/index.component.html
+++ b/src/app/pages/history/index/index.component.html
@@ -1,6 +1,10 @@
 <dx-scheduler
+  [dataSource]="dataSet"
   [views]='["timelineDay", "timelineWeek", "timelineMonth"]'
   currentView="timelineWeek"
+  startDateExpr="start"
+  endDateExpr="end"
+  textExpr="code.coding[0].display"
   [firstDayOfWeek]="0"
   [startDayHour]="0"
   [endDayHour]="24"
