--- a/src/app/pages/home/index/index.component.html
+++ b/src/app/pages/home/index/index.component.html
@@ -42,12 +42,11 @@
       <dxo-group-panel [visible]="true"></dxo-group-panel>
       <dxo-grouping #expand [autoExpandAll]="true"></dxo-grouping>
 
-      <dxi-column [groupIndex]="0" dataField="code.coding[0].code" caption="編碼" dataType="string" [width]="150"></dxi-column>
-      <dxi-column dataField="effectiveDateTime" caption="測量日期時間" dataType="datetime" format="yyyy-MM-dd'T'hh:mm:ss" [width]="150"></dxi-column>
-      <dxi-column dataField="valueQuantity.value" caption="數值" dataType="string" [width]="150"></dxi-column>
-      <dxi-column dataField="valueQuantity.unit" caption="單位" dataType="string" [width]="150"></dxi-column>
-      <dxi-column dataField="subject.reference" caption="被執行處置者" dataType="string" [width]="150"></dxi-column>
-
+      <dxi-column [groupIndex]="0" dataField="code.coding[0].code" caption="編碼" dataType="string"></dxi-column>
+      <dxi-column dataField="effectiveDateTime" caption="測量日期時間" dataType="datetime" format="yyyy-MM-dd'T'hh:mm:ss"></dxi-column>
+      <dxi-column dataField="valueQuantity.value" caption="數值" dataType="string"></dxi-column>
+      <dxi-column dataField="valueQuantity.unit" caption="單位" dataType="string"></dxi-column>
+      <dxi-column dataField="subject.reference" caption="被執行處置者" dataType="string"></dxi-column>
 
     </dx-data-grid>
   </nb-card-body>
